2000-02-07  Paul D. Smith  <psmith@gnu.org>

	For += target-specific variables we need to remember which
	variable set we found the variable in, so we can start looking
	there in the next iteration (otherwise we'll see it again in
	recursively_expand and fail!).  This is getting to be a hack; if
	it gets any worse we'll have to rethink this entire algorithm;
	probably implementing expansion of these separately from the
	"normal" expansion, instead of alongside.

	* variable.h (recursively_expand_setlist): Rename
	recursively_expand to add a struct variable_set_list argument, and
	make a macro for recursively_expand.
	(lookup_variable_setlist): Rename lookup_variable to add a struct
	variable_set_list argument, and make a macro for lookup_variable.

	* expand.c (recursively_expand_setlist): Take an extra struct
	variable_set_list argument and pass it to
	allocated_variable_append().
	(reference_variable): Use lookup_variable_setlist() and pass the
	returned variable_set_list to recursively_expand_setlist.
	(allocated_variable_append): Take an extra setlist argument and
	use this as the starting place when searching for the appended
	expansion.  If it's null, use current_variable_set_list as before.

	* variable.c (lookup_variable_setlist): If the LISTP argument is
	not nil, return the list where we found the variable in it.

2000-02-04  Paul D. Smith  <psmith@gnu.org>

	* variable.c (print_variable): Write out filename/linenumber
	information for the variable definition if present.
	(define_variable_in_set): Store filename information if provided.
	(define_variable, define_variable_for_file): Removed.
	(try_variable_definition): Use define_variable_loc() to keep
	variable definition location information.
	* read.c (read_makefile): Keep variable definition location info.
	(do_define): Ditto.
	(record_target_var): Ditto.
	* variable.h (define_variable_in_set): New fileinfo argument.
	(define_variable, define_variable_loc, define_variable_for_file):