@@ -1,3 +1,14 @@
+2000-02-09  Tim Magill <magill@gate.net>
+	Started branch for cleaning up internal make structure regarding
+	recursion paths.  Branch name is filedef-cleanup and was started
+	from a point on the mainline at filedef-cleanup-base.  either tags
+	are suitable for cvs commands.
+
+	* file.c, filedef.h, main.c, remake.c (updated): Removed updated
+	member from 'struct filedef'.  filedef->command_state fully
+	contains the same information and more.
+
+	
 2000-02-07  Paul D. Smith  <psmith@gnu.org>
 
 	For += target-specific variables we need to remember which
